--- a/index.html
+++ b/index.html
@@ -32,13 +32,24 @@
                 <select name="tipo" id="tipo" class="form-control" ng-model="gdg.valueTipo" required>
                     <option ng-repeat="item in gdg.tipo">{{item}}</option>
                 </select>
-                <input class="form-control" type="file" name="selecionaArquivo" id="selecionaArquivo"
-                 ng-model="gdg.file"  onchange="angular.element(this).scope().convertBase64()"/>
+                <input class="form-control" type="file" name="selecionaArquivo" id="selecionaArquivo" ng-model="gdg.file" onchange="angular.element(this).scope().convertBase64()">
                 <input class="form-control" placeholder="Digite A URL da imagem" type="url" ng-model="gdg.url" />
+
                 <button class="form-control" type="submit" ng-click="enviaPhoto()">ENVIAR</button>
                 <button class="form-control" type="reset">LIMPAR</button>
+
             </form>
-            <img src="data:image/jpeg:base64, {{gdg.base64.binary}}"  alt="{{gdg.altUrl}}" />
+            <div class="row">
+                <div class=col-lg-6>
+                    <textarea name="retornoJson" id="retornoJson" ng-model="retornoJson" cols="70" rows="10"></textarea>
+                </div>
+                <div class="col-lg-6" ng-show="gdg.showBase64">
+                    <img src="data:image/png;base64, {{gdg.base64.binary}}" width="100%"  />
+                </div>
+                <div class="col-lg-6" ng-show="gdg.showUrl">
+                    <img src="{{gdg.url}}"  width="100%" />
+                </div>
+            </div>
         </div>
     </div>
 </body>
