--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <select name="tipo" id="tipo" class="form-control" ng-model="gdg.valueTipo" required>
                     <option ng-repeat="item in gdg.tipo">{{item}}</option>
                 </select>
-                <input class="form-control" type="file" name="selecionaArquivo" id="selecionaArquivo" ng-model="gdg.file" onchange="angular.element(this).scope().convertBase64()">
+                <input class="form-control" type="file" accept="image/x-png,image/gif,image/jpeg" name="selecionaArquivo" id="selecionaArquivo" ng-model="gdg.file" onchange="angular.element(this).scope().convertBase64()">
                 <input class="form-control" placeholder="Digite A URL da imagem" type="url" ng-model="gdg.url" />
 
                 <button class="form-control" type="submit" ng-click="enviaPhoto()">ENVIAR</button>
